<resources>
    <string name="app_name">Udacity - Popular Movies</string>

    <string name="empty_string"> </string>

    // Start
    <string name="loading">Loading&#8230;</string>

    // Main
    <string name="sortByLabel">Sort by:</string>

    // Detail
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="synopsis_label">Synopsis:</string>
    <string name="rating_label">Rating:</string>
    <string name="release_date_label">Release date:</string>
    <string name="poster_image_alt">[Poster image]</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="author">Author:</string>

    <string name="share">Share</string>

    // Alerts
    <string name="alert_title">Alert</string>
    <string name="network_error">Problem connecting to the network.  Please try again later.</string>
    <string name="ok">OK</string>
</resources>
